fix style footer p not visible cause of top margin

--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -187,6 +187,9 @@ footer {
     background-color: #2c84c3bc;
     padding-top: 10px;
 }
+footer p {
+    margin-top: 0;
+}
 
 #clear {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
